// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`science-sim + studio render goldens > renders + pins a digest for a11yAuditor [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 36,
  "paths": 0,
  "selects": 0,
  "sha": "a094025032f1a4bb",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for anatomy [ssr] 1`] = `
{
  "buttons": 96,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 262,
  "paths": 0,
  "selects": 0,
  "sha": "2b5e5f9b0a4bb28d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for archStudio [ssr] 1`] = `
{
  "buttons": 83,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 134,
  "paths": 0,
  "selects": 0,
  "sha": "460a48f6138f8ed9",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for artStudio [ssr] 1`] = `
{
  "buttons": 18,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 40,
  "paths": 0,
  "selects": 0,
  "sha": "721ce3372d818f67",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for astronomy [mount] 1`] = `
{
  "buttons": 18,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 80,
  "paths": 0,
  "selects": 0,
  "sha": "a9545c9dc0d2e755",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bakingScience [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 55,
  "paths": 0,
  "selects": 0,
  "sha": "7310d0c89d3be346",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bridgeLab [mount] 1`] = `
{
  "buttons": 24,
  "canvases": 0,
  "inputs": 8,
  "lengthBucket": 233,
  "paths": 6,
  "selects": 0,
  "sha": "605ec9216d75d5e9",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cell [ssr] 1`] = `
{
  "buttons": 41,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 115,
  "paths": 0,
  "selects": 0,
  "sha": "fadeebf02baa3cb5",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for chemBalance [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 66,
  "paths": 0,
  "selects": 0,
  "sha": "07aa1ad8297333d0",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cyberDefense [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 97,
  "paths": 0,
  "selects": 0,
  "sha": "999fb44bfbfe0601",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echoTrainer [ssr] 1`] = `
{
  "buttons": 28,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 145,
  "paths": 6,
  "selects": 0,
  "sha": "65c0bacd1fb9910d",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echolocation [ssr] 1`] = `
{
  "buttons": 10,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 51,
  "paths": 0,
  "selects": 0,
  "sha": "0c2702408f5d97a8",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for epidemicSim [ssr] 1`] = `
{
  "buttons": 24,
  "canvases": 1,
  "inputs": 13,
  "lengthBucket": 480,
  "paths": 6,
  "selects": 1,
  "sha": "3e6201a0c532bf81",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for fireEcology [ssr] 1`] = `
{
  "buttons": 29,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 128,
  "paths": 0,
  "selects": 0,
  "sha": "d79c6da87ec36301",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for flightSim [ssr] 1`] = `
{
  "buttons": 48,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 209,
  "paths": 2,
  "selects": 2,
  "sha": "b96362c81b18104a",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for galaxy [ssr] 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 224,
  "paths": 1,
  "selects": 0,
  "sha": "ac09530c7b3b36db",
  "svgs": 3,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for gameStudio [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 233,
  "paths": 0,
  "selects": 2,
  "sha": "84b36f01119211ea",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for kitchenLab [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 198,
  "paths": 0,
  "selects": 0,
  "sha": "729079e1d5ea1b11",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for microbiology [mount] 1`] = `
{
  "buttons": 14,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 227,
  "paths": 0,
  "selects": 0,
  "sha": "c2e5ec6275e41222",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for molecule [ssr] 1`] = `
{
  "buttons": 104,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 178,
  "paths": 0,
  "selects": 0,
  "sha": "86d1a092424f870c",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for moonMission [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 70,
  "paths": 0,
  "selects": 0,
  "sha": "306e2c9824e58edf",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for physics [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 9,
  "lengthBucket": 101,
  "paths": 0,
  "selects": 0,
  "sha": "77c2807c0fb342a3",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for punnett [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 106,
  "paths": 0,
  "selects": 2,
  "sha": "97d8be8e2875d7a3",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rockCycle [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 166,
  "paths": 22,
  "selects": 1,
  "sha": "604a12a1040f4197",
  "svgs": 13,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rocks [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 31,
  "paths": 0,
  "selects": 0,
  "sha": "3b52fd1ce668e19a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for semiconductor [mount] 1`] = `
{
  "buttons": 20,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 108,
  "paths": 0,
  "selects": 2,
  "sha": "31493b12dd1e0e43",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for spaceExplorer [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 59,
  "paths": 0,
  "selects": 0,
  "sha": "3b4284037e55e032",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for swimLab [ssr] 1`] = `
{
  "buttons": 13,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 69,
  "paths": 0,
  "selects": 0,
  "sha": "fc95da41a13ac06b",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for throwlab [ssr] 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 266,
  "paths": 0,
  "selects": 0,
  "sha": "e0d4a97af1419484",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for titrationLab [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 70,
  "paths": 0,
  "selects": 0,
  "sha": "4adc7288e6880db7",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for waterCycle [ssr] 1`] = `
{
  "buttons": 35,
  "canvases": 1,
  "inputs": 6,
  "lengthBucket": 168,
  "paths": 0,
  "selects": 1,
  "sha": "58a309ff1c4eb26e",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for wave [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 8,
  "lengthBucket": 105,
  "paths": 0,
  "selects": 0,
  "sha": "ea59d47c8531dd4b",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for weldLab [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 170,
  "paths": 0,
  "selects": 0,
  "sha": "bd822a389e69d4dd",
  "svgs": 0,
}
`;
